--- a/app/views/issues/_relations.rhtml
+++ b/app/views/issues/_relations.rhtml
@@ -1,5 +1,5 @@
 <% content_for :header_tags do %>
-    <%= stylesheet_link_tag 'zencocoon_issues', :plugin => 'redmine_zencocoon_linked_issues' %>
+    <%= stylesheet_link_tag 'zencocoon_linked_issues', :plugin => 'redmine_zencocoon_linked_issues' %>
 <% end %>
 <%-
 prod_project = Project.find(::RedmineZenCocoonLinkedIssues::PROJECT_ID)
